deploy/k8s/base/portal-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-web
  namespace: developer-portal
  labels:
    app.kubernetes.io/name: portal-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: portal-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal-web
    spec:
      containers:
        - name: web
          image: ghcr.io/opsdevcode/portal-web:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
