deploy/k8s/base/portal-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-web
  namespace: developer-portal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portal-web
  ports:
    - port: 80
      targetPort: 80
